# OpenGLProjects

./: .gitignore  CMakeLists.txt  OpenGL_Test.sln  OpenGL_Test.vcxproj  OpenGL_Test.vcxproj.filters  README.md  ShaderClass.cpp  ShaderClass.h  glad.c  main.cpp
OpenGL_Test/x64/Debug/: OpenGL_Test.exe.recipe  OpenGL_Test.ilk  vc143.idb
OpenGL_Test/x64/Debug/OpenGL_Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGL_Test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: ShaderClass.h
include/includes/glad/: glad.h
lib/glad/include/: glad.h
shaders/: fragment.frag  fragment.fs  vertex.vs
src/: glad.c  main.cpp  stbdef.cpp
x64/Debug/: OpenGL_Test.exeP
